[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "aether"
version = "0.0.1"
authors = [
  { name="Jacob Downs", email="jacob.downs@umontana.edu" },
]
description = "Aether finite element package."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]